Fix alerts always visible when scrolling the page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,8 @@
 /* Messages flash */
 
 .message {
-    position: absolute;
+    position: fixed;
+    z-index: 999;
     display: flex;
     align-items: center;
     justify-content: end;
